--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,31 +1,32 @@
+$focus-overlay-border-color: #396aab;
+
 .focus-overlay {
   display: none;
   position: relative;
-  border-radius: 2px;
-  box-shadow: 0 0 3px 2px #78aeda;
   transition: all 0.2s cubic-bezier(0, 1, 0, 1);
 
   &::after {
-    content: '';
+    content: "";
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    box-shadow: 0 0 2px 1px #008cff, 0 0 2px #008cff inset;
-    transition: all 0.1s ease-out;
+    z-index: 9999;
+    top: -4px;
+    right: -4px;
+    bottom: -4px;
+    left: -4px;
+    border: 1px solid $focus-overlay-border-color;
+    border-radius: 0.3125em;
+    box-shadow:
+      (
+        0 0 3px 1px rgba($focus-overlay-border-color, 0.6),
+        inset 0 0 0 1px white,
+      );
   }
 
   .focus-overlay-active {
     display: block;
   }
 
-  .focus-overlay-animating::after {
-    opacity: 1;
+  &-target {
+    outline: none;
   }
-}
-
-.focus-overlay-target {
-  outline: none;
 }
