--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,12 @@ $focus-overlay-transition: all 0.2s cubic-bezier(0, 1, 0, 1) !default;
   }
 
   &-target {
-    outline: none;
+    &,
+    &:focus,
+    &:focus:not(:focus-visible),
+    &:focus-visible {
+      outline: none;
+      box-shadow: none;
+    }
   }
 }
